Stop moving content when browser adds/removes the scrollbar

--- a/assets/css/terminal.css
+++ b/assets/css/terminal.css
@@ -8,6 +8,8 @@
 }
 
 html {
+  width: 100vw;
+  overflow-x: hidden;
   box-sizing: border-box;
 }
 
